@@ -1,9 +1,12 @@
-source("R/parse-files.R")
 
-process_data()
 
-source("R/mfg-map.R")
-source("R/mfg-mastertable.R")
+# I no longer have access to the original Powerwave files, but I'll leave
+# this here to show the entire processing workflow.
+#
+# source("R/parse-files.R")
+# 
+# process_data()
+
 source("R/msa-map.R")
 
 source("R/run-shiny.R")
